deployment/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: duplicare
  labels:
    name: duplicare
